Actually included files changed for last commit, and fixed shebang line in other tests.

--- a/Changes
+++ b/Changes
@@ -5,3 +5,6 @@ Revision history for p5-Bio-SeqWare-File-Table
 0.000.002 2014-04-16
    [API] - Read a tab-delimited file with header.
          - Write tab-delimited file with header.
+         - Get header unparsed.
+         - Get data lines as array-ref, unparsed.
+         - Get canonical line-parsed data structure.
